objects/ASI_CRM_Outlet_Sellout__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Item_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Group</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Outlet Sellout</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Item_Group__c.ASI_CRM_Key_OFF_Item_Group__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Item_Group__c</referenceTo>
        <relationshipLabel>Outlet Sellouts</relationshipLabel>
        <relationshipName>Outlet_Sellouts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Sellout_Btl__c</fullName>
        <label>Outlet Sellout (Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet__c</fullName>
        <label>Outlet</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Outlet Sellouts</relationshipLabel>
        <relationshipName>Outlet_Sellouts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Outlet Sellout</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OS-{00000000}</displayFormat>
        <label>Outlet Sellout ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outlet Sellouts</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Outlet_Sellout</fullName>
        <active>true</active>
        <label>CN Outlet Sellout</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_CN_DateValidation</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS( RecordType.DeveloperName , &apos;ASI_CRM_CN_Outlet_Sellout&apos;) &amp;&amp; ASI_CRM_Date__c &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Date__c</errorDisplayField>
        <errorMessage>Please don&apos;t input data in the future.</errorMessage>
    </validationRules>
</CustomObject>